--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "coffee-script": "^1.11.1",
-    "jsonschema": "^1.1.0"
+    "jsonschema": "^1.1.0",
+    "typescript": "^2.0.3"
   }
 }
