--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "coffee-script": "^1.11.1",
+    "express": "^4.14.0",
     "jsonschema": "^1.1.0",
     "typescript": "^2.0.3"
   }
