--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "express": "^4.14.0",
     "jsonschema": "^1.1.0",
     "typescript": "^2.0.3"
+  },
+  "devDependencies": {
+    "jasmine": "^2.5.2",
+    "request": "^2.75.0"
   }
 }
