--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "jse",
   "version": "1.0.0",
   "description": "",
-  "main": "jse.js",
+  "main": "index.js",
   "scripts": {
     "test-api": "./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.api.json",
     "test-unit": "./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=jasmine.unit.json",
-    "start": "node jse.js"
+    "start": "node index.js"
   },
   "author": "Vladimir Zeifman",
   "license": "MIT",
