--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "bunyan": "^1.8.9",
     "coffee-script": "^1.11.1",
     "express": "^4.14.0",
     "jsonschema": "^1.1.0",
